TFP-4873 bruker mal5 for overstyring av fakta uttak (#5287)
* TFP-4873 bruker mal5 for overstyring av fakta uttak

* Litt mer tekst ved overstyring

* Litt rydding